# SPDX-FileCopyrightText: 2021 Christopher Kerr
# SPDX-License-Identifier: CC0-1.0
[metadata]
# N.B. The MIT-licensed CodeQL file and the CC0-licensed
# config files are not included in the .whl package so
# their licenses do not need to be packaged either.
license_files =
   LICENSES/GPL-3.0-or-later.txt
